src/components/x-layers/x-layers.css
:host {
  display: block;
}

x-layers-container {
  width: var(--x-layers-width);
  height: var(--x-layers-height);
  min-width: var(--x-layers-width);
  min-height: var(--x-layers-height);
  border: 1px solid black;
  border-radius: 2px;
  background-color: transparent;
  background-image: url(https://xlayers.app/assets/transparent-square-tiles.png);
  background-repeat: repeat;
  background-size: 130px;
  position: absolute;
}

span.error {
  border: 1px solid red;
  padding: 4px;
  background: #ff2a2a;
  width: calc(100% - 10px);
  color: white;
  display: block;
  position: absolute;
  top: 1px;
  z-index: 99999;
  left: 1px;
  text-align: center;
}

